// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`проверка Authorization 1`] = `
<div
  className="Authorization"
>
  <label>
    Введите логин:
  </label>
  <br />
  <input
    autoFocus={true}
    className="inputText"
    name="nameUser"
    onChange={[Function]}
    type="text"
    value=""
  />
  <br />
  <span>
    
  </span>
  <br />
  <br />
  
</div>
`;

exports[`проверка Authorization 2`] = `
<div
  className="Authorization"
>
  <label>
    Введите логин:
  </label>
  <br />
  <input
    autoFocus={true}
    className="inputText"
    name="nameUser"
    onChange={[Function]}
    type="text"
    value="sdfasdf"
  />
  <br />
  <span>
    Нет такого сотрудника
  </span>
  <br />
  <br />
  <input
    className="button"
    disabled={false}
    onPointerDown={[Function]}
    type="button"
    value="[Войти]"
  />
</div>
`;

exports[`проверка Authorization 3`] = `
<div
  className="Authorization"
>
  <label>
    Введите логин:
  </label>
  <br />
  <input
    autoFocus={true}
    className="inputText"
    name="nameUser"
    onChange={[Function]}
    type="text"
    value="ivanov0"
  />
  <br />
  <span>
    Нет такого сотрудника
  </span>
  <br />
  <br />
  <input
    className="button"
    disabled={false}
    onPointerDown={[Function]}
    type="button"
    value="[Войти]"
  />
</div>
`;

exports[`проверка Authorization 4`] = `
<div
  className="Authorization"
>
  <label>
    Введите логин:
  </label>
  <br />
  <input
    autoFocus={true}
    className="inputText"
    name="nameUser"
    onChange={[Function]}
    type="text"
    value="saveliev47"
  />
  <br />
  <span>
    
  </span>
  <br />
  <br />
  <input
    className="button"
    disabled={false}
    onPointerDown={[Function]}
    type="button"
    value="[Войти]"
  />
</div>
`;

exports[`проверка ввода 1`] = `
<div
  className="AddNewEmp"
>
  <h2
    style={
      Object {
        "marginLeft": "1vw",
      }
    }
  >
    Добавление нового сотрудника 
  </h2>
  <br />
  <label
    className="label"
  >
    Логин:
    <br />
    <input
      className="inputText"
      name="login"
      onBlur={[Function]}
      onChange={[Function]}
      placeholder="login"
      type="text"
      value=""
    />
    <span
      style={
        Object {
          "color": "black",
        }
      }
    >
      
    </span>
  </label>
  <label
    className="label"
  >
    Уровень доступа:
    <br />
    <select
      className="inputText"
      name="level"
      onBlur={[Function]}
      onChange={[Function]}
    >
      <option
        value={1}
      >
        Уровень доступа 1
      </option>
      <option
        value={2}
      >
        Уровень доступа 2
      </option>
      <option
        value={3}
      >
        Уровень доступа 3
      </option>
    </select>
  </label>
  <label
    className="label"
  >
    ФИО(полностью):
    <br />
    <input
      className="inputText"
      name="FIO"
      onBlur={[Function]}
      onChange={[Function]}
      placeholder="Иванов Иван Иванович"
      type="text"
      value=""
    />
    <span
      style={
        Object {
          "color": "black",
        }
      }
    >
      
    </span>
  </label>
  <label
    className="label"
  >
    Почта:
    <br />
    <input
      className="inputText"
      name="email"
      onBlur={[Function]}
      onChange={[Function]}
      placeholder="login@example.com"
      type="text"
      value=""
    />
    <span
      style={
        Object {
          "color": "black",
        }
      }
    >
      
    </span>
  </label>
  <label
    className="label"
  >
    Телефон:
    <br />
    <input
      className="inputText"
      name="phone"
      onBlur={[Function]}
      onChange={[Function]}
      placeholder="333333333"
      type="text"
      value=""
    />
    <span
      style={
        Object {
          "color": "black",
        }
      }
    >
      
    </span>
  </label>
  <label
    className="label"
  >
    Отдел:
    <br />
    <select
      className="inputText"
      name="department"
      onBlur={[Function]}
      onChange={[Function]}
    >
      <option
        value="Руководство"
      >
        Руководство
      </option>
      <option
        value="Отдел закупок"
      >
        Отдел закупок
      </option>
      <option
        value="Отдел продаж"
      >
        Отдел продаж
      </option>
      <option
        value="Транспортный отдел"
      >
        Транспортный отдел
      </option>
      <option
        value="Бухгалтерия"
      >
        Бухгалтерия
      </option>
      <option
        value="Отдел кадров"
      >
        Отдел кадров
      </option>
      <option
        value="Складское хозяйство"
      >
        Складское хозяйство
      </option>
    </select>
  </label>
  <label
    className="label"
  >
    Должность:
    <br />
    <input
      className="inputText"
      name="position"
      onBlur={[Function]}
      onChange={[Function]}
      placeholder="Сотрудник отдела"
      type="text"
      value=""
    />
    <span
      style={
        Object {
          "color": "black",
        }
      }
    >
      
    </span>
  </label>
  <br />
  <div>
    <input
      className="button"
      onPointerDown={[Function]}
      type="button"
      value="[Выйти без сохранения]"
    />
  </div>
</div>
`;

exports[`проверка ввода 2`] = `
<div
  className="AddNewEmp"
>
  <h2
    style={
      Object {
        "marginLeft": "1vw",
      }
    }
  >
    Добавление нового сотрудника 
  </h2>
  <br />
  <label
    className="label"
  >
    Логин:
    <br />
    <input
      className="inputText"
      name="login"
      onBlur={[Function]}
      onChange={[Function]}
      placeholder="login"
      type="text"
      value="asdf"
    />
    <span
      style={
        Object {
          "color": "black",
        }
      }
    >
      
    </span>
  </label>
  <label
    className="label"
  >
    Уровень доступа:
    <br />
    <select
      className="inputText"
      name="level"
      onBlur={[Function]}
      onChange={[Function]}
    >
      <option
        value={1}
      >
        Уровень доступа 1
      </option>
      <option
        value={2}
      >
        Уровень доступа 2
      </option>
      <option
        value={3}
      >
        Уровень доступа 3
      </option>
    </select>
  </label>
  <label
    className="label"
  >
    ФИО(полностью):
    <br />
    <input
      className="inputText"
      name="FIO"
      onBlur={[Function]}
      onChange={[Function]}
      placeholder="Иванов Иван Иванович"
      type="text"
      value="Иванов Иван Иванович"
    />
    <span
      style={
        Object {
          "color": "black",
        }
      }
    >
      
    </span>
  </label>
  <label
    className="label"
  >
    Почта:
    <br />
    <input
      className="inputText"
      name="email"
      onBlur={[Function]}
      onChange={[Function]}
      placeholder="login@example.com"
      type="text"
      value="ivanov@example.com"
    />
    <span
      style={
        Object {
          "color": "black",
        }
      }
    >
      
    </span>
  </label>
  <label
    className="label"
  >
    Телефон:
    <br />
    <input
      className="inputText"
      name="phone"
      onBlur={[Function]}
      onChange={[Function]}
      placeholder="333333333"
      type="text"
      value="295554422"
    />
    <span
      style={
        Object {
          "color": "black",
        }
      }
    >
      
    </span>
  </label>
  <label
    className="label"
  >
    Отдел:
    <br />
    <select
      className="inputText"
      name="department"
      onBlur={[Function]}
      onChange={[Function]}
    >
      <option
        value="Руководство"
      >
        Руководство
      </option>
      <option
        value="Отдел закупок"
      >
        Отдел закупок
      </option>
      <option
        value="Отдел продаж"
      >
        Отдел продаж
      </option>
      <option
        value="Транспортный отдел"
      >
        Транспортный отдел
      </option>
      <option
        value="Бухгалтерия"
      >
        Бухгалтерия
      </option>
      <option
        value="Отдел кадров"
      >
        Отдел кадров
      </option>
      <option
        value="Складское хозяйство"
      >
        Складское хозяйство
      </option>
    </select>
  </label>
  <label
    className="label"
  >
    Должность:
    <br />
    <input
      className="inputText"
      name="position"
      onBlur={[Function]}
      onChange={[Function]}
      placeholder="Сотрудник отдела"
      type="text"
      value="Продавец"
    />
    <span
      style={
        Object {
          "color": "black",
        }
      }
    >
      
    </span>
  </label>
  <br />
  <div>
    <input
      className="button"
      onPointerDown={[Function]}
      type="button"
      value="[Сохранить]"
    />
    <input
      className="button"
      onPointerDown={[Function]}
      type="button"
      value="[Выйти без сохранения]"
    />
  </div>
</div>
`;

exports[`проверка нажатия на кнопку войти 1`] = `
<div
  className="Authorization"
>
  <label>
    Введите логин:
  </label>
  <br />
  <input
    autoFocus={true}
    className="inputText"
    name="nameUser"
    onChange={[Function]}
    type="text"
    value=""
  />
  <br />
  <span>
    
  </span>
  <br />
  <br />
  
</div>
`;

exports[`проверка нажатия на кнопку войти 2`] = `
<div
  className="Authorization"
>
  <label>
    Введите логин:
  </label>
  <br />
  <input
    autoFocus={true}
    className="inputText"
    name="nameUser"
    onChange={[Function]}
    type="text"
    value="ivanov0"
  />
  <br />
  <span>
    Нет такого сотрудника
  </span>
  <br />
  <br />
  <input
    className="button"
    disabled={false}
    onPointerDown={[Function]}
    type="button"
    value="[Войти]"
  />
</div>
`;

exports[`проверка нажатия на кнопку войти 3`] = `
<div
  className="Authorization"
>
  <label>
    Введите логин:
  </label>
  <br />
  <input
    autoFocus={true}
    className="inputText"
    name="nameUser"
    onChange={[Function]}
    type="text"
    value="ivanov0"
  />
  <br />
  <span>
    Нет такого сотрудника
  </span>
  <br />
  <br />
  <input
    className="button"
    disabled={false}
    onPointerDown={[Function]}
    type="button"
    value="[Войти]"
  />
</div>
`;

exports[`проверка нажатия на кнопку войти 4`] = `
<div
  className="Authorization"
>
  <label>
    Введите логин:
  </label>
  <br />
  <input
    autoFocus={true}
    className="inputText"
    name="nameUser"
    onChange={[Function]}
    type="text"
    value="ivanov0"
  />
  <br />
  <span>
    Нет такого сотрудника
  </span>
  <br />
  <br />
  <input
    className="button"
    disabled={false}
    onPointerDown={[Function]}
    type="button"
    value="[Войти]"
  />
</div>
`;

exports[`проверка некорректного ввода 1`] = `
<div
  className="AddNewEmp"
>
  <h2
    style={
      Object {
        "marginLeft": "1vw",
      }
    }
  >
    Добавление нового сотрудника 
  </h2>
  <br />
  <label
    className="label"
  >
    Логин:
    <br />
    <input
      className="inputText"
      name="login"
      onBlur={[Function]}
      onChange={[Function]}
      placeholder="login"
      type="text"
      value=""
    />
    <span
      style={
        Object {
          "color": "black",
        }
      }
    >
      
    </span>
  </label>
  <label
    className="label"
  >
    Уровень доступа:
    <br />
    <select
      className="inputText"
      name="level"
      onBlur={[Function]}
      onChange={[Function]}
    >
      <option
        value={1}
      >
        Уровень доступа 1
      </option>
      <option
        value={2}
      >
        Уровень доступа 2
      </option>
      <option
        value={3}
      >
        Уровень доступа 3
      </option>
    </select>
  </label>
  <label
    className="label"
  >
    ФИО(полностью):
    <br />
    <input
      className="inputText"
      name="FIO"
      onBlur={[Function]}
      onChange={[Function]}
      placeholder="Иванов Иван Иванович"
      type="text"
      value=""
    />
    <span
      style={
        Object {
          "color": "black",
        }
      }
    >
      
    </span>
  </label>
  <label
    className="label"
  >
    Почта:
    <br />
    <input
      className="inputText"
      name="email"
      onBlur={[Function]}
      onChange={[Function]}
      placeholder="login@example.com"
      type="text"
      value=""
    />
    <span
      style={
        Object {
          "color": "black",
        }
      }
    >
      
    </span>
  </label>
  <label
    className="label"
  >
    Телефон:
    <br />
    <input
      className="inputText"
      name="phone"
      onBlur={[Function]}
      onChange={[Function]}
      placeholder="333333333"
      type="text"
      value=""
    />
    <span
      style={
        Object {
          "color": "black",
        }
      }
    >
      
    </span>
  </label>
  <label
    className="label"
  >
    Отдел:
    <br />
    <select
      className="inputText"
      name="department"
      onBlur={[Function]}
      onChange={[Function]}
    >
      <option
        value="Руководство"
      >
        Руководство
      </option>
      <option
        value="Отдел закупок"
      >
        Отдел закупок
      </option>
      <option
        value="Отдел продаж"
      >
        Отдел продаж
      </option>
      <option
        value="Транспортный отдел"
      >
        Транспортный отдел
      </option>
      <option
        value="Бухгалтерия"
      >
        Бухгалтерия
      </option>
      <option
        value="Отдел кадров"
      >
        Отдел кадров
      </option>
      <option
        value="Складское хозяйство"
      >
        Складское хозяйство
      </option>
    </select>
  </label>
  <label
    className="label"
  >
    Должность:
    <br />
    <input
      className="inputText"
      name="position"
      onBlur={[Function]}
      onChange={[Function]}
      placeholder="Сотрудник отдела"
      type="text"
      value=""
    />
    <span
      style={
        Object {
          "color": "black",
        }
      }
    >
      
    </span>
  </label>
  <br />
  <div>
    <input
      className="button"
      onPointerDown={[Function]}
      type="button"
      value="[Выйти без сохранения]"
    />
  </div>
</div>
`;

exports[`проверка некорректного ввода 2`] = `
<div
  className="AddNewEmp"
>
  <h2
    style={
      Object {
        "marginLeft": "1vw",
      }
    }
  >
    Добавление нового сотрудника 
  </h2>
  <br />
  <label
    className="label"
  >
    Логин:
    <br />
    <input
      className="inputText"
      name="login"
      onBlur={[Function]}
      onChange={[Function]}
      placeholder="login"
      type="text"
      value="asdfsdfasdfasdfsd"
    />
    <span
      style={
        Object {
          "color": "black",
        }
      }
    >
      Не более 7 символов
    </span>
  </label>
  <label
    className="label"
  >
    Уровень доступа:
    <br />
    <select
      className="inputText"
      name="level"
      onBlur={[Function]}
      onChange={[Function]}
    >
      <option
        value={1}
      >
        Уровень доступа 1
      </option>
      <option
        value={2}
      >
        Уровень доступа 2
      </option>
      <option
        value={3}
      >
        Уровень доступа 3
      </option>
    </select>
  </label>
  <label
    className="label"
  >
    ФИО(полностью):
    <br />
    <input
      className="inputText"
      name="FIO"
      onBlur={[Function]}
      onChange={[Function]}
      placeholder="Иванов Иван Иванович"
      type="text"
      value="ИвановИванИванович"
    />
    <span
      style={
        Object {
          "color": "black",
        }
      }
    >
      
    </span>
  </label>
  <label
    className="label"
  >
    Почта:
    <br />
    <input
      className="inputText"
      name="email"
      onBlur={[Function]}
      onChange={[Function]}
      placeholder="login@example.com"
      type="text"
      value="ivanovexample.com"
    />
    <span
      style={
        Object {
          "color": "black",
        }
      }
    >
      
    </span>
  </label>
  <label
    className="label"
  >
    Телефон:
    <br />
    <input
      className="inputText"
      name="phone"
      onBlur={[Function]}
      onChange={[Function]}
      placeholder="333333333"
      type="text"
      value="2955544uu22"
    />
    <span
      style={
        Object {
          "color": "black",
        }
      }
    >
      Содержит 9 цифр
    </span>
  </label>
  <label
    className="label"
  >
    Отдел:
    <br />
    <select
      className="inputText"
      name="department"
      onBlur={[Function]}
      onChange={[Function]}
    >
      <option
        value="Руководство"
      >
        Руководство
      </option>
      <option
        value="Отдел закупок"
      >
        Отдел закупок
      </option>
      <option
        value="Отдел продаж"
      >
        Отдел продаж
      </option>
      <option
        value="Транспортный отдел"
      >
        Транспортный отдел
      </option>
      <option
        value="Бухгалтерия"
      >
        Бухгалтерия
      </option>
      <option
        value="Отдел кадров"
      >
        Отдел кадров
      </option>
      <option
        value="Складское хозяйство"
      >
        Складское хозяйство
      </option>
    </select>
  </label>
  <label
    className="label"
  >
    Должность:
    <br />
    <input
      className="inputText"
      name="position"
      onBlur={[Function]}
      onChange={[Function]}
      placeholder="Сотрудник отдела"
      type="text"
      value="продавец"
    />
    <span
      style={
        Object {
          "color": "black",
        }
      }
    >
      Первая буква заглавная; только кириллица
    </span>
  </label>
  <br />
  <div>
    <input
      className="button"
      onPointerDown={[Function]}
      type="button"
      value="[Выйти без сохранения]"
    />
  </div>
</div>
`;

exports[`проверка правильности значений инпутов при открытии 1`] = `
<div
  className="AddNewEmp"
>
  <h2
    style={
      Object {
        "marginLeft": "1vw",
      }
    }
  >
    Добавление нового сотрудника 
  </h2>
  <br />
  <label
    className="label"
  >
    Логин:
    <br />
    <input
      className="inputText"
      name="login"
      onBlur={[Function]}
      onChange={[Function]}
      placeholder="login"
      type="text"
      value=""
    />
    <span
      style={
        Object {
          "color": "black",
        }
      }
    >
      
    </span>
  </label>
  <label
    className="label"
  >
    Уровень доступа:
    <br />
    <select
      className="inputText"
      name="level"
      onBlur={[Function]}
      onChange={[Function]}
    >
      <option
        value={1}
      >
        Уровень доступа 1
      </option>
      <option
        value={2}
      >
        Уровень доступа 2
      </option>
      <option
        value={3}
      >
        Уровень доступа 3
      </option>
    </select>
  </label>
  <label
    className="label"
  >
    ФИО(полностью):
    <br />
    <input
      className="inputText"
      name="FIO"
      onBlur={[Function]}
      onChange={[Function]}
      placeholder="Иванов Иван Иванович"
      type="text"
      value=""
    />
    <span
      style={
        Object {
          "color": "black",
        }
      }
    >
      
    </span>
  </label>
  <label
    className="label"
  >
    Почта:
    <br />
    <input
      className="inputText"
      name="email"
      onBlur={[Function]}
      onChange={[Function]}
      placeholder="login@example.com"
      type="text"
      value=""
    />
    <span
      style={
        Object {
          "color": "black",
        }
      }
    >
      
    </span>
  </label>
  <label
    className="label"
  >
    Телефон:
    <br />
    <input
      className="inputText"
      name="phone"
      onBlur={[Function]}
      onChange={[Function]}
      placeholder="333333333"
      type="text"
      value=""
    />
    <span
      style={
        Object {
          "color": "black",
        }
      }
    >
      
    </span>
  </label>
  <label
    className="label"
  >
    Отдел:
    <br />
    <select
      className="inputText"
      name="department"
      onBlur={[Function]}
      onChange={[Function]}
    >
      <option
        value="Руководство"
      >
        Руководство
      </option>
      <option
        value="Отдел закупок"
      >
        Отдел закупок
      </option>
      <option
        value="Отдел продаж"
      >
        Отдел продаж
      </option>
      <option
        value="Транспортный отдел"
      >
        Транспортный отдел
      </option>
      <option
        value="Бухгалтерия"
      >
        Бухгалтерия
      </option>
      <option
        value="Отдел кадров"
      >
        Отдел кадров
      </option>
      <option
        value="Складское хозяйство"
      >
        Складское хозяйство
      </option>
    </select>
  </label>
  <label
    className="label"
  >
    Должность:
    <br />
    <input
      className="inputText"
      name="position"
      onBlur={[Function]}
      onChange={[Function]}
      placeholder="Сотрудник отдела"
      type="text"
      value=""
    />
    <span
      style={
        Object {
          "color": "black",
        }
      }
    >
      
    </span>
  </label>
  <br />
  <div>
    <input
      className="button"
      onPointerDown={[Function]}
      type="button"
      value="[Выйти без сохранения]"
    />
  </div>
</div>
`;

exports[`проверка рендера кнопки при верном логине 1`] = `
<div
  className="Authorization"
>
  <label>
    Введите логин:
  </label>
  <br />
  <input
    autoFocus={true}
    className="inputText"
    name="nameUser"
    onChange={[Function]}
    type="text"
    value=""
  />
  <br />
  <span>
    
  </span>
  <br />
  <br />
  
</div>
`;

exports[`проверка рендера кнопки при верном логине 2`] = `
<div
  className="Authorization"
>
  <label>
    Введите логин:
  </label>
  <br />
  <input
    autoFocus={true}
    className="inputText"
    name="nameUser"
    onChange={[Function]}
    type="text"
    value="ivanov0"
  />
  <br />
  <span>
    Нет такого сотрудника
  </span>
  <br />
  <br />
  <input
    className="button"
    disabled={false}
    onPointerDown={[Function]}
    type="button"
    value="[Войти]"
  />
</div>
`;
